--- a/Sources/Domains/CLK.Windows/CLK.Windows.csproj
+++ b/Sources/Domains/CLK.Windows/CLK.Windows.csproj
@@ -67,18 +67,18 @@
     <Compile Include="Network.Sockets\RouteUdpClientPool.cs" />
     <Compile Include="Network.Sockets\RouteUdpPacket.cs" />
     <Compile Include="Network\Utilities\NetworkInterfaceUtility.cs" />
-    <Compile Include="Operation\Implementation\ConfigComponentBrokerRepository.cs" />
-    <Compile Include="Operation\Implementation\ConfigComponentWrapperRepository.cs" />
-    <Compile Include="Operation\Implementation\MefComponentWrapperBuilder.cs" />
-    <Compile Include="Operation\Implementation\MefComponentWrapperRepository.cs" />
+    <Compile Include="Operation\ConfigComponentBrokerRepository.cs" />
+    <Compile Include="Operation\ConfigComponentWrapperRepository.cs" />
+    <Compile Include="Operation\MefComponentWrapperBuilder.cs" />
+    <Compile Include="Operation\MefComponentWrapperRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\ConfigReflectContext.cs" />
-    <Compile Include="Reflection\Implementation\ConfigReflectRepository.cs" />
-    <Compile Include="Reflection\Implementation\ReflectConfigurationElement.cs" />
-    <Compile Include="Reflection\Implementation\ReflectConfigurationElementCollection.cs" />
-    <Compile Include="Reflection\Implementation\ReflectConfigurationSection.cs" />
-    <Compile Include="Settings\Implementation\ConfigAppSettingRepository.cs" />
-    <Compile Include="Settings\Implementation\ConfigConnectionStringRepository.cs" />
+    <Compile Include="Reflection\ConfigReflectRepository.cs" />
+    <Compile Include="Reflection\ReflectConfigurationElement.cs" />
+    <Compile Include="Reflection\ReflectConfigurationElementCollection.cs" />
+    <Compile Include="Reflection\ReflectConfigurationSection.cs" />
+    <Compile Include="Settings\ConfigAppSettingRepository.cs" />
+    <Compile Include="Settings\ConfigConnectionStringRepository.cs" />
     <Compile Include="Settings\ConfigSettingContext.cs" />
     <Compile Include="Threading\BlockingQueue.cs" />
     <Compile Include="Threading\PortableReaderWriterLock.cs" />
