--- a/Sources/Domains/CLK/CLK.csproj
+++ b/Sources/Domains/CLK/CLK.csproj
@@ -70,14 +70,15 @@
     <Compile Include="Reflection\ReflectGroupDictionary.cs" />
     <Compile Include="Reflection\ReflectSetting.cs" />
     <Compile Include="Reflection\ReflectBuilderDictionary.cs" />
-    <Compile Include="Scheduling\Implementation\ConcatTrigger.cs" />
-    <Compile Include="Scheduling\Implementation\DatedTrigger.cs" />
-    <Compile Include="Scheduling\Implementation\PromptlyTrigger.cs" />
-    <Compile Include="Scheduling\Implementation\TimedTrigger.cs" />
-    <Compile Include="Scheduling\Implementation\YearlyTrigger.cs" />
-    <Compile Include="Scheduling\Implementation\DailyTrigger.cs" />
-    <Compile Include="Scheduling\Implementation\MonthlyTrigger.cs" />
-    <Compile Include="Scheduling\Implementation\HourlyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Actions\EmptyAction.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\ConcatTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\DatedTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\PromptlyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\TimedTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\YearlyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\DailyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\MonthlyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\HourlyTrigger.cs" />
     <Compile Include="Scheduling\ScheduleContext.cs" />
     <Compile Include="Scheduling\TaskAction.cs" />
     <Compile Include="Scheduling\TaskRecord.cs" />
