--- a/Sources/CLK.nuspec
+++ b/Sources/CLK.nuspec
@@ -8,7 +8,7 @@
     <owners>Clark</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>CLK</description>
-    <copyright>Copyright © 2014 CLK Software Studios</copyright>
+    <copyright>Copyright © 2014 CLK Software Studio</copyright>
     <dependencies>
     </dependencies>
   </metadata>
