--- a/Sources/CLK.Windows/CLK.Windows.csproj
+++ b/Sources/CLK.Windows/CLK.Windows.csproj
@@ -92,9 +92,7 @@
       <Name>CLK</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Transactions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
