--- a/Sources/CLK/CLK.csproj
+++ b/Sources/CLK/CLK.csproj
@@ -60,11 +60,38 @@
     <Compile Include="Reflection\ReflectGroupRepository.cs" />
     <Compile Include="Reflection\ReflectRepository.cs" />
     <Compile Include="Reflection\ReflectSetting.cs" />
+    <Compile Include="Scheduling\Implementation\Actions\ConcatAction.cs" />
+    <Compile Include="Scheduling\Implementation\Actions\EmptyAction.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\ConcatTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\DailyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\DatedTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\HourlyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\MonthlyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\PromptlyTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\TimedTrigger.cs" />
+    <Compile Include="Scheduling\Implementation\Triggers\YearlyTrigger.cs" />
+    <Compile Include="Scheduling\ScheduleContext.cs" />
+    <Compile Include="Scheduling\TaskAction.cs" />
+    <Compile Include="Scheduling\TaskRecord.cs" />
+    <Compile Include="Scheduling\TaskRecordRepository.cs" />
+    <Compile Include="Scheduling\TaskSetting.cs" />
+    <Compile Include="Scheduling\TaskSettingRepository.cs" />
+    <Compile Include="Scheduling\TaskState.cs" />
+    <Compile Include="Scheduling\TaskStateRepository.cs" />
+    <Compile Include="Scheduling\TaskTrigger.cs" />
     <Compile Include="Settings\Implementation\MemorySettingContext.cs" />
     <Compile Include="Settings\Implementation\MemorySettingRepository.cs" />
     <Compile Include="Settings\SettingContext.cs" />
     <Compile Include="Settings\SettingDictionary.cs" />
     <Compile Include="Settings\SettingRepository.cs" />
+    <Compile Include="Transactions\Implementation\EmptyUnitOfWorkScope.cs" />
+    <Compile Include="Transactions\Implementation\EmptyUnitOfWorkScopeProvider.cs" />
+    <Compile Include="Transactions\Implementation\LockUnitOfWorkScope.cs" />
+    <Compile Include="Transactions\Implementation\LockUnitOfWorkScopeProvider.cs" />
+    <Compile Include="Transactions\IUnitOfWorkScope.cs" />
+    <Compile Include="Transactions\IUnitOfWorkScopeProvider.cs" />
+    <Compile Include="Transactions\UnitOfWorkContext.cs" />
+    <Compile Include="Transactions\UnitOfWorkScope.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
