--- a/Sources/CLK.Windows/CLK.Windows.csproj
+++ b/Sources/CLK.Windows/CLK.Windows.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,10 @@
     <Compile Include="Configuration\FreeAttributeConfigurationElementCollection.cs" />
     <Compile Include="Configuration\FreeAttributeDictionary.cs" />
     <Compile Include="Configuration\FreeAttributeProvider.cs" />
+    <Compile Include="Data\Extensions\SqlCommandExtensions.cs" />
+    <Compile Include="Data\SqlCommandScope.cs" />
+    <Compile Include="Data\SqlConnectionScope.cs" />
+    <Compile Include="Data\SqlTransactionScope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\ConfigReflectContext.cs" />
     <Compile Include="Reflection\ConfigReflectRepository.cs" />
@@ -57,6 +62,10 @@
     <Compile Include="Settings\ConfigAppSettingRepository.cs" />
     <Compile Include="Settings\ConfigConnectionStringRepository.cs" />
     <Compile Include="Settings\ConfigSettingContext.cs" />
+    <Compile Include="Transactions\DistributedUnitOfWorkScope.cs" />
+    <Compile Include="Transactions\DistributedUnitOfWorkScopeProvider.cs" />
+    <Compile Include="Transactions\SqlClient\SqlUnitOfWorkScope.cs" />
+    <Compile Include="Transactions\SqlClient\SqlUnitOfWorkScopeProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CLK\CLK.csproj">
