--- a/Sources/CLK.Windows/CLK.Windows.csproj
+++ b/Sources/CLK.Windows/CLK.Windows.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Data\SqlCommandScope.cs" />
     <Compile Include="Data\SqlConnectionScope.cs" />
     <Compile Include="Data\SqlTransactionScope.cs" />
+    <Compile Include="IO\FileSystemWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\ConfigReflectContext.cs" />
     <Compile Include="Reflection\ConfigReflectRepository.cs" />
