--- a/src/CLK.AspNetCore/CLK.AspNetCore.csproj
+++ b/src/CLK.AspNetCore/CLK.AspNetCore.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DDE9A465-D116-4A51-9079-51C1C44446C8}</ProjectGuid>
+    <ProjectGuid>{110999FE-FD05-446E-BB5C-B5A3855093A3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CLK.Logging.Log4net</RootNamespace>
-    <AssemblyName>CLK.Logging.Log4net</AssemblyName>
+    <RootNamespace>CLK.AspNetCore</RootNamespace>
+    <AssemblyName>CLK.AspNetCore</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,21 +41,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Log4netLoggerProvider.cs" />
-    <Compile Include="Log4netLoggerFactory.cs" />
+    <Compile Include="Application.cs" />
+    <Compile Include="AspNetCoreContext.cs" />
+    <Compile Include="Extensions\ActionLoggerExtension.cs" />
+    <Compile Include="Extensions\AssemblyControllerExtension.cs" />
+    <Compile Include="Extensions\ExceptionMiddlewareExtension.cs" />
+    <Compile Include="Extensions\NamespaceRouteExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\FileHelper.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore">
+      <Version>2.1.4</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Cors">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core">
+      <Version>2.1.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles">
+      <Version>2.1.1</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CLK.Autofac\CLK.Autofac.csproj">
+      <Project>{eb28dcee-6f50-4ec7-a790-936735e13136}</Project>
+      <Name>CLK.Autofac</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CLK.Logging.Log4net\CLK.Logging.Log4net.csproj">
+      <Project>{dde9a465-d116-4a51-9079-51c1c44446c8}</Project>
+      <Name>CLK.Logging.Log4net</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CLK.Logging\CLK.Logging.csproj">
       <Project>{9ac5d7bf-4935-41ec-ab6d-e31673f53e44}</Project>
       <Name>CLK.Logging</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="log4net">
-      <Version>2.0.8</Version>
-    </PackageReference>
+    <ProjectReference Include="..\CLK.Services\CLK.Services.csproj">
+      <Project>{8d29bf82-5d2a-432d-a1b1-01877c5ab476}</Project>
+      <Name>CLK.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
