--- a/src/CLK.Autofac/CLK.Autofac.csproj
+++ b/src/CLK.Autofac/CLK.Autofac.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BE36A99D-6E18-4DB3-B7E4-44E396314110}</ProjectGuid>
+    <ProjectGuid>{EB28DCEE-6F50-4EC7-A790-936735E13136}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CLK.Autofac</RootNamespace>
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AutofacContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\FileHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac">
