--- a/src/CLK.AspNetCore/CLK.AspNetCore.csproj
+++ b/src/CLK.AspNetCore/CLK.AspNetCore.csproj
@@ -1,86 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{110999FE-FD05-446E-BB5C-B5A3855093A3}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CLK.AspNetCore</RootNamespace>
-    <AssemblyName>CLK.AspNetCore</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Application.cs" />
-    <Compile Include="AspNetCoreContext.cs" />
-    <Compile Include="Extensions\ActionLoggerExtension.cs" />
-    <Compile Include="Extensions\AssemblyControllerExtension.cs" />
-    <Compile Include="Extensions\ExceptionMiddlewareExtension.cs" />
-    <Compile Include="Extensions\NamespaceRouteExtension.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\FileHelper.cs" />
+    <ProjectReference Include="..\CLK.Autofac\CLK.Autofac.csproj" />
+    <ProjectReference Include="..\CLK.Logging.Log4net\CLK.Logging.Log4net.csproj" />
+    <ProjectReference Include="..\CLK.Logging\CLK.Logging.csproj" />
+    <ProjectReference Include="..\CLK.Services\CLK.Services.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore">
-      <Version>2.1.4</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Cors">
-      <Version>2.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core">
-      <Version>2.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles">
-      <Version>2.1.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CLK.Autofac\CLK.Autofac.csproj">
-      <Project>{eb28dcee-6f50-4ec7-a790-936735e13136}</Project>
-      <Name>CLK.Autofac</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CLK.Logging.Log4net\CLK.Logging.Log4net.csproj">
-      <Project>{dde9a465-d116-4a51-9079-51c1c44446c8}</Project>
-      <Name>CLK.Logging.Log4net</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CLK.Logging\CLK.Logging.csproj">
-      <Project>{9ac5d7bf-4935-41ec-ab6d-e31673f53e44}</Project>
-      <Name>CLK.Logging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CLK.Services\CLK.Services.csproj">
-      <Project>{8d29bf82-5d2a-432d-a1b1-01877c5ab476}</Project>
-      <Name>CLK.Services</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
