--- a/src/CLK.AspNetCore.Lab/appsettings.json
+++ b/src/CLK.AspNetCore.Lab/appsettings.json
@@ -1,6 +1,5 @@
 ﻿{
   "appId": "CLK.AspNetCore.Lab",
   "appName": "CLK.AspNetCore.Lab",
-  "appVersion": "v20181009",
-  "baseUrl": "http://*:5000"
+  "appVersion": "v20181009"
 }
