--- a/src/CLK.AspNetCore/CLK.AspNetCore.csproj
+++ b/src/CLK.AspNetCore/CLK.AspNetCore.csproj
@@ -1,19 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CLK.Autofac\CLK.Autofac.csproj" />
-    <ProjectReference Include="..\CLK.Logging.Log4net\CLK.Logging.Log4net.csproj" />
     <ProjectReference Include="..\CLK.Logging\CLK.Logging.csproj" />
     <ProjectReference Include="..\CLK.Services\CLK.Services.csproj" />
   </ItemGroup>
