--- a/src/CLK.Data.SqlClient/CLK.Data.SqlClient.csproj
+++ b/src/CLK.Data.SqlClient/CLK.Data.SqlClient.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
+  </ItemGroup>
 
 </Project>
