--- a/src/CLK.Activities/CLK.Activities.csproj
+++ b/src/CLK.Activities/CLK.Activities.csproj
@@ -47,17 +47,16 @@
   <ItemGroup>
     <Compile Include="Activity.cs" />
     <Compile Include="ActivityContext.cs" />
-    <Compile Include="ActivityFactory.cs" />
-    <Compile Include="ActivityLauncher.cs" />
     <Compile Include="ActivityModel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shell.cs" />
     <Compile Include="ShellModel.cs" />
+    <Compile Include="ViewConverter.cs" />
+    <Compile Include="ViewModelLauncher.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\BinableBase.cs" />
     <Compile Include="Utilities\RelayCommand.cs" />
     <Compile Include="Utilities\SyncContext.cs" />
     <Compile Include="View.cs" />
-    <Compile Include="ViewConverter.cs" />
     <Compile Include="ViewFactory.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="Views\NotFoundView.xaml.cs">
