--- a/src/CLK.Windows.Lab/CLK.Windows.Lab.csproj
+++ b/src/CLK.Windows.Lab/CLK.Windows.Lab.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -118,6 +119,10 @@
     <ProjectReference Include="..\CLK.Services\CLK.Services.csproj">
       <Project>{d5f9a388-d6da-4e33-a42d-9fb555d839fc}</Project>
       <Name>CLK.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CLK.Windows\CLK.Windows.csproj">
+      <Project>{e7b258b3-b85c-40ae-8f9c-94879bc3b41f}</Project>
+      <Name>CLK.Windows</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
