--- a/src/CLK.Windows/CLK.Windows.csproj
+++ b/src/CLK.Windows/CLK.Windows.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AD634D0A-9295-4AE2-AEB5-6B8E5AD958C4}</ProjectGuid>
+    <ProjectGuid>{E7B258B3-B85C-40AE-8F9C-94879BC3B41F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CLK.Activities</RootNamespace>
-    <AssemblyName>CLK.Activities</AssemblyName>
+    <RootNamespace>CLK.Windows</RootNamespace>
+    <AssemblyName>CLK.Windows</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -45,32 +45,23 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Activity.cs" />
-    <Compile Include="ActivityContext.cs" />
-    <Compile Include="ActivityModel.cs" />
-    <Compile Include="Shell.cs" />
-    <Compile Include="ShellModel.cs" />
-    <Compile Include="ViewConverter.cs" />
-    <Compile Include="ViewModelLauncher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\BinableBase.cs" />
-    <Compile Include="Utilities\RelayCommand.cs" />
-    <Compile Include="Utilities\SyncContext.cs" />
-    <Compile Include="View.cs" />
-    <Compile Include="ViewFactory.cs" />
-    <Compile Include="ViewModel.cs" />
-    <Compile Include="Views\NotFoundView.xaml.cs">
-      <DependentUpon>NotFoundView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\NotFoundViewModel.cs" />
-    <Compile Include="Window.cs" />
-    <Compile Include="WindowModel.cs" />
+    <Compile Include="WindowContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\NotFoundView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <ProjectReference Include="..\CLK.Activities\CLK.Activities.csproj">
+      <Project>{ad634d0a-9295-4ae2-aeb5-6b8e5ad958c4}</Project>
+      <Name>CLK.Activities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CLK.Autofac\CLK.Autofac.csproj">
+      <Project>{8B3AB9AF-A749-4BDC-9BD9-697233AD285E}</Project>
+      <Name>CLK.Autofac</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Autofac">
+      <Version>4.8.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
