--- a/src/CLK.AspNetCore.Lab/appsettings.json
+++ b/src/CLK.AspNetCore.Lab/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "appName": "CLK.AspNetCore.Lab",
-  "appVersion": "v20181009",
-  "webListen": "http://*:5000"
+  "appVersion": "v20181018",
+  "appListen": "http://*:5000"
 }
