--- a/src/CLK.Windows/CLK.Windows.csproj
+++ b/src/CLK.Windows/CLK.Windows.csproj
@@ -45,6 +45,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowContext.cs" />
   </ItemGroup>
@@ -53,9 +54,21 @@
       <Project>{ad634d0a-9295-4ae2-aeb5-6b8e5ad958c4}</Project>
       <Name>CLK.Activities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CLK.AspNetCore\CLK.AspNetCore.csproj">
+      <Project>{97E76DC1-3A4F-4F05-AAAB-99D7EF0C7474}</Project>
+      <Name>CLK.AspNetCore</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CLK.Autofac\CLK.Autofac.csproj">
       <Project>{8B3AB9AF-A749-4BDC-9BD9-697233AD285E}</Project>
       <Name>CLK.Autofac</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CLK.Logging.Log4net\CLK.Logging.Log4net.csproj">
+      <Project>{7AFEC0AD-36A8-4FC3-B7AD-9655C77A788A}</Project>
+      <Name>CLK.Logging.Log4net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CLK.Logging\CLK.Logging.csproj">
+      <Project>{92569F47-4AA2-44AF-9119-0F2E27CBC5D1}</Project>
+      <Name>CLK.Logging</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
