--- a/src/CLK.Platform/CLK.Platform.csproj
+++ b/src/CLK.Platform/CLK.Platform.csproj
@@ -6,9 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
-    <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CLK.Autofac\CLK.Autofac.csproj" />
   </ItemGroup>
 
 </Project>
