使用Autofac作為核心概念，重構Module設計

--- a/src/CLK.Transactions.Distributing/CLK.Transactions.Distributing.csproj
+++ b/src/CLK.Transactions.Distributing/CLK.Transactions.Distributing.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DistributedTransactionScopeFactory.cs" />
-    <Compile Include="DistributedTransactionScopeProvider.cs" />
+    <Compile Include="DistributedTransactionProvider.cs" />
+    <Compile Include="DistributedTransaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
